[regression 6.0.12->6.1.1] Multiple amdgpu crashes (update_mst_stream_alloc_table/drm_dp_atomic_find_time_slots)
Brief summary of the problem:
Booting the system with 2 external monitors attached (via USB adapter) causes the system to freeze. The first external monitor shows a frozen mouse cursor on a black background. I cannot switch to a text console (Ctrl-Alt-F1) but I can log in via SSH.
[ 4.133233] ------------[ cut here ]------------
[ 4.133237] WARNING: CPU: 4 PID: 106 at drivers/gpu/drm/amd/amdgpu/../display/dc/core/dc_link.c:3533 update_mst_stream_alloc_table+0x150/0x160 [amdgpu]
[ 4.133608] Modules linked in: bpf_preload ip_tables x_tables ext4 crc32c_generic crc16 mbcache jbd2 hid_logitech_hidpp hid_logitech_dj usbhid amdgpu drm_ttm_helper ttm gpu_sched rtsx_pci_sdmmc serio_raw drm_buddy atkbd mmc_core libps2 vivaldi_fmap drm_display_helper crc32c_intel xhci_pci video cec xhci_pci_renesas i8042 rtsx_pci serio wmi
[ 4.133632] CPU: 4 PID: 106 Comm: kworker/4:1 Not tainted 6.1.1-arch1-1 #1 9bd09188b430be630e611f984454e4f3c489be77
[ 4.133636] Hardware name: HP HP ProBook 445 G6/85D9, BIOS R80 Ver. 01.21.01 07/28/2022
[ 4.133638] Workqueue: events_long drm_dp_mst_link_probe_work [drm_display_helper]
[ 4.133655] RIP: 0010:update_mst_stream_alloc_table+0x150/0x160 [amdgpu]
[ 4.134013] Code: 00 00 75 2d 48 81 c4 98 00 00 00 5b 5d 41 5c e9 ba fb 54 d7 41 0f b7 40 04 4d 89 19 49 89 59 08 66 41 89 41 10 e9 71 ff ff ff <0f> 0b e9 fe fe ff ff e8 24 c6 16 d7 0f 1f 40 00 0f 1f 44 00 00 55
[ 4.134015] RSP: 0018:ffffc1b980553680 EFLAGS: 00010202
[ 4.134018] RAX: 0000000000000002 RBX: 0000000000000000 RCX: 0000000000000000
[ 4.134019] RDX: 0000000000000000 RSI: ffffc1b980553680 RDI: ffffc1b980553710
[ 4.134020] RBP: ffffa10043100aa0 R08: ffffc1b980553740 R09: ffffc1b980553488
[ 4.134022] R10: ffffa1004b8d2c00 R11: ffffa1004ca9d540 R12: 0000000000000002
[ 4.134023] R13: ffffa1004b6b5800 R14: ffffffffc0c1c4c0 R15: 0000000000000000
[ 4.134024] FS: 0000000000000000(0000) GS:ffffa1035ff00000(0000) knlGS:0000000000000000
[ 4.134026] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 4.134027] CR2: 00007f5a354cf178 CR3: 00000002c2a10000 CR4: 00000000003506e0
[ 4.134029] Call Trace:
[ 4.134032] <TASK>
[ 4.134036] dc_link_allocate_mst_payload+0x99/0x2a0 [amdgpu 895e2b3772442c7d04dbf61a65c8a3690bb074b6]
[ 4.134393] core_link_enable_stream+0x7d0/0x980 [amdgpu 895e2b3772442c7d04dbf61a65c8a3690bb074b6]
[ 4.134748] ? optc1_set_drr+0x13a/0x1e0 [amdgpu 895e2b3772442c7d04dbf61a65c8a3690bb074b6]
[ 4.135110] dce110_apply_ctx_to_hw+0x67b/0x720 [amdgpu 895e2b3772442c7d04dbf61a65c8a3690bb074b6]
[ 4.135465] ? dm_read_reg_func+0x3b/0xb0 [amdgpu 895e2b3772442c7d04dbf61a65c8a3690bb074b6]
[ 4.135831] dc_commit_state_no_check+0x38c/0xc70 [amdgpu 895e2b3772442c7d04dbf61a65c8a3690bb074b6]
[ 4.136186] dc_commit_state+0x96/0x110 [amdgpu 895e2b3772442c7d04dbf61a65c8a3690bb074b6]
[ 4.136541] amdgpu_dm_atomic_commit_tail+0x4a4/0x2ae0 [amdgpu 895e2b3772442c7d04dbf61a65c8a3690bb074b6]
[ 4.136903] ? ktime_get_raw+0x35/0x90
[ 4.136909] ? __alloc_pages+0xf8/0x250
[ 4.136914] ? allocate_slab+0x25d/0x4a0
[ 4.136919] ? drm_atomic_helper_setup_commit+0x1c0/0x840
[ 4.136924] ? dma_resv_iter_first_unlocked+0x66/0x70
[ 4.136927] ? dma_resv_get_fences+0x61/0x220
[ 4.136931] ? wait_for_completion_timeout+0x13e/0x170
[ 4.136935] ? wait_for_completion_interruptible+0x139/0x1e0
[ 4.136938] commit_tail+0x94/0x130
[ 4.136942] drm_atomic_helper_commit+0x116/0x140
[ 4.136946] drm_atomic_commit+0x7b/0x100
[ 4.136949] ? drm_plane_get_damage_clips.cold+0x1c/0x1c
[ 4.136953] drm_client_modeset_commit_atomic+0x206/0x250
[ 4.136958] drm_client_modeset_commit_locked+0x5a/0x160
[ 4.136962] drm_client_modeset_commit+0x25/0x40
[ 4.136965] drm_fb_helper_set_par+0xa2/0xe0
[ 4.136968] drm_fb_helper_hotplug_event+0xa3/0xf0
[ 4.136971] drm_kms_helper_hotplug_event+0x2a/0x40
[ 4.136974] process_one_work+0x1c7/0x380
[ 4.136979] worker_thread+0x51/0x390
[ 4.136982] ? rescuer_thread+0x3b0/0x3b0
[ 4.136985] kthread+0xde/0x110
[ 4.136988] ? kthread_complete_and_exit+0x20/0x20
[ 4.136991] ret_from_fork+0x22/0x30
[ 4.136997] </TASK>
[ 4.136998] ---[ end trace 0000000000000000 ]---
Hardware description:
- CPU: AMD Ryzen 2500u
- GPU: 04:00.0 VGA compatible controller [0300]: Advanced Micro Devices, Inc. [AMD/ATI] Raven Ridge [Radeon Vega Series / Radeon Vega Mobile Series] [1002:15dd] (rev c4)
- System Memory: 16 GB DDR4(?)
- Display(s): internal 1080p panel (HP), 2x external 1440p (Lenovo)
- Type of Display Connection: USB-C to dual DisplayPort adapter (Monoprice)
System information:
- Distro name and Version: Arch Linux
- Kernel version: Linux version 6.1.1-arch1-1 (linux@archlinux) (gcc (GCC) 12.2.0, GNU ld (GNU Binutils) 2.39.0) #1 (closed) SMP PREEMPT_DYNAMIC Wed, 21 Dec 2022 22:27:55 +0000
- Custom kernel: N/A
- AMD official driver version: N/A
How to reproduce the issue:
Simply booting the system with 2 external monitors attached (via USB adapter). I use an X11 display manager which starts automatically.
Attached files:
Log files (for system lockups / game freezes / crashes)
I will attach these shortly (I need to reboot back into 6.1.1).