Fix null pointer dereference in drm_dp_atomic_find_time_slots()

The pointer returned by drm_atomic_get_old_connector_state() or
drm_atomic_get_new_connector_state() may be NULL. Add checks to
avoid crashing when it is.

This patch makes it possible to use displays connected to a USB-C
dock again with the amdgpu driver (broken since Linux 6.1).

Signed-off-by: John Lindgren <john@jlindgren.net>
Fixes: a5c2c0d164e9 ("drm/display/dp_mst: Add nonblocking helpers for DP MST")
Link: https://gitlab.freedesktop.org/drm/amd/-/issues/2314